--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Fretio</title>
+    <!-- Add jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Add AOS CSS for scrolling effects -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" />
     <style>
         * {
             margin: 0;
@@ -13,9 +17,9 @@
         }
 
         body {
-    background: linear-gradient(to right, #3a3a3a, #c78000); /* Darker tones with a golden touch */
-    color: #f5f5f5;
-}
+            background: linear-gradient(to right, #3a3a3a, #c78000); /* Darker tones with a golden touch */
+            color: #f5f5f5;
+        }
         .navbar {
             display: flex;
             justify-content: space-between;
@@ -173,7 +177,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar" data-aos="fade-down">
         <img src="kh2ZWeP.png" alt="Fretio Logo" class="logo">
         <div class="nav-links">
             <a href="index.html">HOME</a>
@@ -190,7 +194,7 @@
     </nav>
 
     <main class="main-content">
-        <div class="contact-form">
+        <div class="contact-form" data-aos="fade-up">
             <form id="contactForm">
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -217,7 +221,7 @@
             </form>
         </div>
 
-        <div class="contact-info">
+        <div class="contact-info" data-aos="fade-up" data-aos-delay="200">
             <h1 class="contact-title">
                 Contact <span>Us</span>
                 <span class="star star-1">✦</span>
@@ -255,6 +259,11 @@
             // Add your form submission logic here
             console.log('Form submitted');
         });
+    </script>
+    <!-- Add AOS JavaScript library and initialize it -->
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 </html>
