--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Add FontAwesome for social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- Add jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -104,6 +106,10 @@
             <!-- <button class="follow-button">
                 Follow @reallygreatssite For more tips
             </button> -->
+        </div>
+
+        <div data-aos="fade-up">
+            Your content that will fade up on scroll.
         </div>
     </main>
 
