--- a/food/food.html
+++ b/food/food.html
@@ -201,7 +201,7 @@
     
     <nav class="navbar">
         <div class="logo">
-            <img src="kh2ZWeP.png" alt="Logo">
+            <img src="Logo.png" alt="Logo">
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
