--- a/home/index.html
+++ b/home/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="kh2ZWeP.png" alt="Logo">
+            <img src="Logo.png" alt="Logo">
         </div>
         <nav>
             <ul>
@@ -59,7 +59,7 @@
                 <p>"FROM STUDENTS, FOR STUDENTS - RENT OR BUY !"</p>
                 <p>NEEDED IT AT NIGHT, RENT IT RIGHT !!</p>
             </div>
-            <img src="votykTC.png" alt="Character" class="hero-image">
+            <img src="Boy.png" alt="Character" class="hero-image">
         </section>
 
         <!-- Featured Products Section -->
