--- a/home/index.html
+++ b/home/index.html
@@ -107,7 +107,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div>
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Screenshot%202025-02-08%20173759-8BOnvYmsrqmJf9rHyne7hG4EQSdo4j.png" alt="Fretio Logo" class="footer-logo">
+                <img src="Logo.png" alt="Fretio Logo" class="footer-logo">
             </div>
             <div class="footer-links">
                 <a href="contact.html">Contact us</a>
