fetch the nav bar

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="../medicine/medi.html">Medicine</a></li>
-                <li><a href="../food/food.html">Food Items</a></li>
-                <li><a href="../clothes/clothes.html">Clothes</a></li>
+                <li><a href="./medicine/medi.html">Medicine</a></li>
+                <li><a href="./food/food.html">Food Items</a></li>
+                <li><a href="./clothes/clothes.html">Clothes</a></li>
                 
             </ul>
         </nav>
@@ -75,7 +75,7 @@
 
             <div class="products-grid">
                 <div class="product-card">
-                    <a href="./clothes/clothes.html"><img src="./home/product1.png" alt="Adidas Shoes" class="product-image"></a>
+                    <a href="../clothes/clothes.html"><img src="../home/product1.png" alt="Adidas Shoes" class="product-image"></a>
                     <div class="product-info">
                         <div class="product-title">Adidas Shoes</div>
                         <span class="arrow">→</span>
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="product-card">
-                    <a href="./food/food.html"><img src="./home/product2.png" alt="Snacks" class="product-image"></a>
+                    <a href="../food/food.html"><img src="../home/product2.png" alt="Snacks" class="product-image"></a>
                     <div class="product-info">
                         <div class="product-title">Snacks</div>
                         <span class="arrow">→</span>
@@ -91,8 +91,7 @@
                 </div>
 
                 <div class="product-card">
-                    <a href="./medicine/medi.html"></a><img src="./home/product3.png" alt="Medicines" class="product-image"></a>
-    
+                    <a href="../medicine/medi.html"><img src="./home/product3.png" alt="Medicines" class="product-image"></a>
                     <div class="product-info">
                         <div class="product-title">Medicines</div>
                         <span class="arrow">→</span>
