--- a/medicine/medi.html
+++ b/medicine/medi.html
@@ -147,6 +147,7 @@
         .product-card:hover {
             transform: scale(1.05);
             box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.3);
+            cursor:pointer;
         }
 
         .product-image {
